Update intro.mdx with comprehensive introduction and structure for StepUp6 educational materials

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -2,46 +2,149 @@
 sidebar_position: 1
 ---
 
-# Tutorial Intro
+# Giới thiệu StepUp6
 
-Let's discover **Docusaurus in less than 5 minutes**.
+Chào mừng bạn đến với **StepUp6** - Bộ tài liệu luyện thi toàn diện dành cho học sinh lớp 5 chuẩn bị thi vào THCS chuyên.
 
-## Getting Started
+## Mục tiêu của chúng tôi
 
-Get started by **creating a new site**.
+StepUp6 được xây dựng với mục tiêu:
 
-Or **try Docusaurus immediately** with **[docusaurus.new](https://docusaurus.new)**.
+- **Hỗ trợ tự học**: Thiết kế để học sinh lớp 5 có thể tự học hiệu quả
+- **Công cụ đồng hành**: Giúp phụ huynh có tài liệu tin cậy để hướng dẫn con em ôn tập
+- **Hệ thống hoá kiến thức**: Tổng hợp và sắp xếp kiến thức một cách logic, dễ tiếp cận
 
-### What you'll need
+## Điểm nổi bật
 
-- [Node.js](https://nodejs.org/en/download/) version 18.0 or above:
-  - When installing Node.js, you are recommended to check all checkboxes related to dependencies.
+### Tổng hợp tài liệu uy tín
 
-## Generate a new site
+Chúng tôi đã thu thập và chọn lọc:
+- **Đề thi và tài liệu luyện thi** từ trường THCS Trần Đại Nghĩa (Quận 1, TP.HCM)
+- **Đề thi và tài liệu luyện thi** từ trường THCS Trần Quốc Toản (Thủ Đức, TP.HCM)
+- **Bài giảng và phương pháp** từ các giáo viên có kinh nghiệm luyện thi
 
-Generate a new Docusaurus site using the **classic template**.
+### Chương trình khung kiến thức tổng quát
 
-The classic template will automatically be added to your project after you run the command:
+- Hệ thống kiến thức cốt lõi của chương trình lớp 5
+- Các chuyên đề nâng cao cần thiết cho kỳ thi vào trường chuyên
+- Phân loại theo mức độ từ cơ bản đến nâng cao
 
-```bash
-npm init docusaurus@latest my-website classic
+### Lộ trình học tập cá nhân hóa
+
+- **Lộ trình chuyên biệt** cho từng trường (Trần Đại Nghĩa, Trần Quốc Toản)
+- **Kế hoạch ôn tập** theo tuần/tháng, phù hợp với thời gian chuẩn bị
+- **Hệ thống bài tập** đa dạng với đáp án và hướng dẫn giải chi tiết
+
+## Cách sử dụng bộ tài liệu
+
+1. Đánh giá năng lực hiện tại qua các bài kiểm tra đầu vào
+2. Chọn lộ trình phù hợp với mục tiêu và thời gian
+3. Học lý thuyết, làm bài tập theo từng chuyên đề
+4. Kiểm tra định kỳ và điều chỉnh lộ trình nếu cần
+
+## Khung Tài Liệu StepUp6
+
+Bộ tài liệu StepUp6 được tổ chức theo cấu trúc khoa học, giúp dễ dàng tra cứu và học tập hiệu quả.
+
+### Cấu trúc chung
+
+```
+StepUp6
+├── Kiến thức nền tảng
+│   ├── Toán học
+│   ├── Tiếng Việt
+│   ├── Tiếng Anh
+│   ├── Tư duy & Giải quyết vấn đề
+│   └── Kiến thức tổng hợp
+│
+├── Đề thi & Tài liệu theo trường
+│   ├── THCS Trần Đại Nghĩa
+│   └── THCS Trần Quốc Toản
+│
+├── Lộ trình ôn tập
+│   ├── 6 tháng chuẩn bị
+│   ├── 3 tháng chuẩn bị
+│   └── 1 tháng chuẩn bị
+│
+└── Bài tập & Đánh giá
+    ├── Bài tập theo chuyên đề
+    ├── Đề thi thử
+    └── Đánh giá năng lực
 ```
 
-You can type this command into Command Prompt, Powershell, Terminal, or any other integrated terminal of your code editor.
+### Chi tiết từng phần
 
-The command also installs all necessary dependencies you need to run Docusaurus.
+#### 1. Kiến thức nền tảng
 
-## Start your site
+##### Toán học
+- **Số học**: Phân số, tỷ số, số thập phân, quy tắc chia hết
+- **Đại số**: Biểu thức, phương trình, bất phương trình
+- **Hình học**: Hình phẳng, diện tích, thể tích, hình không gian
+- **Toán nâng cao**: Tổ hợp, xác suất, giải toán lời văn, toán logic
 
-Run the development server:
+##### Tiếng Việt
+- **Ngữ pháp**: Cấu trúc câu, từ loại, dấu câu
+- **Đọc hiểu**: Kỹ năng đọc hiểu văn bản, trả lời câu hỏi
+- **Viết**: Kỹ năng viết đoạn văn, bài văn
+- **Chính tả & Ngữ âm**: Quy tắc chính tả, ngữ âm tiếng Việt
 
-```bash
-cd my-website
-npm run start
-```
+##### Tiếng Anh
+- **Từ vựng**: Từ vựng theo chủ đề
+- **Ngữ pháp**: Thì, cấu trúc câu cơ bản và nâng cao
+- **Đọc hiểu**: Kỹ năng đọc hiểu văn bản tiếng Anh
+- **Kỹ năng nghe**: Luyện nghe tiếng Anh
 
-The `cd` command changes the directory you're working with. In order to work with your newly created Docusaurus site, you'll need to navigate the terminal there.
+##### Tư duy & Giải quyết vấn đề
+- **Tư duy logic**: Các bài toán logic, suy luận
+- **Tư duy không gian**: Hình khối, xoay hình, gấp hình
+- **Tư duy sáng tạo**: Các bài tập sáng tạo, giải quyết vấn đề
+- **IQ & EQ**: Bài tập phát triển IQ và EQ
 
-The `npm run start` command builds your website locally and serves it through a development server, ready for you to view at http://localhost:3000/.
+#### 2. Đề thi & Tài liệu theo trường
 
-Open `docs/intro.md` (this page) and edit some lines: the site **reloads automatically** and displays your changes.
+##### THCS Trần Đại Nghĩa
+- **Đề thi các năm**: 2018-2024
+- **Cấu trúc đề thi**: Phân tích chi tiết
+- **Đặc thù kiến thức**: Các dạng bài thường gặp
+- **Chiến lược ôn tập**: Phương pháp ôn tập hiệu quả
+
+##### THCS Trần Quốc Toản
+- **Đề thi các năm**: 2018-2024
+- **Cấu trúc đề thi**: Phân tích chi tiết
+- **Đặc thù kiến thức**: Các dạng bài thường gặp
+- **Chiến lược ôn tập**: Phương pháp ôn tập hiệu quả
+
+#### 3. Lộ trình ôn tập
+
+##### 6 tháng chuẩn bị
+- **Tháng 1-2**: Kiến thức nền tảng
+- **Tháng 3-4**: Luyện kỹ năng và nâng cao
+- **Tháng 5-6**: Luyện đề và chuẩn bị thi
+
+##### 3 tháng chuẩn bị
+- **Tháng 1**: Kiến thức trọng tâm
+- **Tháng 2**: Luyện dạng bài khó
+- **Tháng 3**: Luyện đề và chuẩn bị thi
+
+##### 1 tháng chuẩn bị
+- **Tuần 1-2**: Ôn tập nhanh kiến thức trọng tâm
+- **Tuần 3-4**: Luyện đề và kỹ thuật làm bài thi
+
+#### 4. Bài tập & Đánh giá
+
+##### Bài tập theo chuyên đề
+- **Bài tập cơ bản**: Bài tập theo từng chuyên đề
+- **Bài tập nâng cao**: Bài tập khó, có tính phân loại
+- **Bộ sưu tập đề thi**: Đề thi từ nhiều trường chuyên
+
+##### Đề thi thử
+- **Đề thi thử TĐN**: Theo cấu trúc Trần Đại Nghĩa
+- **Đề thi thử TQT**: Theo cấu trúc Trần Quốc Toản
+- **Đề thi tổng hợp**: Kết hợp nhiều dạng đề thi
+
+##### Đánh giá năng lực
+- **Bài kiểm tra đầu vào**: Xác định năng lực ban đầu
+- **Bài kiểm tra định kỳ**: Đánh giá tiến độ học tập
+- **Bài kiểm tra tổng hợp**: Đánh giá toàn diện
+
+Hãy bắt đầu hành trình chinh phục kỳ thi vào trường chuyên cùng StepUp6!
