Add answer keys and images for 2019 exam at Tran Dai Nghia

--- a/docs/exams/tran-dai-nghia/2019.mdx
+++ b/docs/exams/tran-dai-nghia/2019.mdx
@@ -19,4 +19,16 @@ import PDFViewer from '@site/src/components/PDFViewer';
 
 ## Answer Key
 
+### Trắc nghiệm
+
+![Answer TN](/files/exams/tran-dai-nghia/2019_ans_tn.jpg)
+
+### Tự luận – Trang 1
+
+![Answer TL1](/files/exams/tran-dai-nghia/2019_ans_tl1.jpg)
+
+### Tự luận – Trang 2
+
+![Answer TL2](/files/exams/tran-dai-nghia/2019_ans_tl2.jpg)
+
 {/* Đáp án: đang cập nhật */} 
