Add historical timelines, cultural festivals, and environmental protection processes with visual aids for comprehensive exam preparation materials

--- a/docs/exam_preparation/3_Social_and_Science_Knowledge/geography_history_culture/cultural_events.mdx
+++ b/docs/exam_preparation/3_Social_and_Science_Knowledge/geography_history_culture/cultural_events.mdx
@@ -40,6 +40,30 @@ Việt Nam có lịch sử lâu đời với nhiều sự kiện lịch sử qua
 | **Đổi Mới** | 1986 | Mở đầu công cuộc đổi mới toàn diện đất nước |
 | **Việt Nam gia nhập ASEAN** | 1995 | Hội nhập quốc tế, mở đầu cho quá trình hội nhập sâu rộng |
 
+### 1.4. Dòng thời gian lịch sử Việt Nam
+
+```mermaid
+timeline
+    title Các mốc quan trọng trong lịch sử Việt Nam
+    section Thời kỳ dựng nước
+        2879 TCN - 258 TCN : Thời đại Hùng Vương<br/>Dựng nước Văn Lang
+        258 TCN - 207 TCN : An Dương Vương<br/>Nước Âu Lạc, xây thành Cổ Loa
+        40 - 43 : Khởi nghĩa Hai Bà Trưng
+        938 : Ngô Quyền chiến thắng Bạch Đằng<br/>Chấm dứt 1000 năm Bắc thuộc
+        1010 : Lý Thái Tổ dời đô về Thăng Long
+    section Thời kỳ độc lập tự chủ
+        1258, 1285, 1288 : Ba lần kháng chiến chống Mông-Nguyên
+        1418 - 1427 : Khởi nghĩa Lam Sơn do Lê Lợi lãnh đạo
+        1789 : Nguyễn Huệ đại phá quân Thanh
+    section Thời kỳ hiện đại
+        1858 - 1954 : Kháng chiến chống Pháp
+        19/8/1945 : Cách mạng Tháng Tám thành công
+        7/5/1954 : Chiến thắng Điện Biên Phủ
+        30/4/1975 : Giải phóng miền Nam, thống nhất đất nước
+        1986 : Đường lối Đổi mới, mở cửa hội nhập
+        1995 : Việt Nam gia nhập ASEAN
+```
+
 ## 2. Lễ hội truyền thống Việt Nam
 
 ### 2.1. Lễ hội theo mùa
@@ -52,7 +76,46 @@ Việt Nam có lịch sử lâu đời với nhiều sự kiện lịch sử qua
 | **Tết Trung Thu** | 15/8 âm lịch | Ngày hội cho trẻ em, có bánh trung thu, đèn lồng |
 | **Lễ Vu Lan** | 15/7 âm lịch | Báo hiếu cha mẹ, tưởng nhớ tổ tiên |
 
-### 2.2. Lễ hội vùng miền
+### 2.2. Lịch các lễ hội chính trong năm theo tháng âm lịch
+
+```mermaid
+gantt
+    title Lịch các lễ hội chính trong năm (Âm lịch)
+    dateFormat MM-DD
+    axisFormat %m/%d
+    
+    section Tháng 1
+    Tết Nguyên Đán      :01-01, 7d
+    Hội Gióng           :01-06, 3d
+    Hội Lim             :01-13, 2d
+    
+    section Tháng 2
+    Hội Chùa Hương     :02-05, 90d
+    Hội Đền Trần       :02-13, 3d
+    
+    section Tháng 3
+    Hội Đền Hùng       :03-10, 5d
+    
+    section Tháng 4
+    Lễ Phật Đản        :04-15, 1d
+    
+    section Tháng 5
+    Tết Đoan Ngọ       :05-05, 1d
+    
+    section Tháng 7
+    Lễ Vu Lan          :07-15, 1d
+    
+    section Tháng 8
+    Tết Trung Thu      :08-15, 1d
+    
+    section Tháng 10
+    Tết Hạ Nguyên      :10-15, 1d
+    
+    section Tháng 12
+    Tết Ông Táo        :12-23, 1d
+```
+
+### 2.3. Lễ hội vùng miền
 
 | Lễ hội | Địa điểm | Đặc điểm và ý nghĩa |
 |--------|----------|---------------------|
