--- a/docs/exam_preparation/3_Social_and_Science_Knowledge/geography_history_culture/landmarks_and_history.mdx
+++ b/docs/exam_preparation/3_Social_and_Science_Knowledge/geography_history_culture/landmarks_and_history.mdx
@@ -40,6 +40,56 @@ Kiến thức về địa danh và di tích lịch sử là một phần quan tr
 | **Tượng đài Mẹ Việt Nam anh hùng** | Quảng Nam | Tưởng niệm các bà mẹ có con hy sinh trong chiến tranh |
 | **Dinh Độc Lập** | TP. Hồ Chí Minh | Công trình kiến trúc lịch sử, từng là nơi làm việc của Tổng thống Việt Nam Cộng hòa |
 
+### 1.4. Phân bố di sản thế giới tại Việt Nam
+
+```mermaid
+flowchart TB
+    VN[Việt Nam] --> VH[Di sản Văn hóa]
+    VN --> TN[Di sản Thiên nhiên]
+    VN --> HH[Di sản Hỗn hợp]
+    
+    VH --> Hue[Quần thể di tích Cố đô Huế]
+    VH --> HoiAn[Đô thị cổ Hội An]
+    VH --> MySon[Thánh địa Mỹ Sơn]
+    VH --> Citadel[Thành nhà Hồ]
+    VH --> ImperialCitadel[Hoàng thành Thăng Long]
+    VH --> NhaNhac[Nhã nhạc cung đình Huế]
+    VH --> CaTru[Ca trù]
+    VH --> QuantHo[Dân ca Quan họ Bắc Ninh]
+    
+    TN --> HaLong[Vịnh Hạ Long]
+    TN --> PhongNha[Vườn quốc gia Phong Nha-Kẻ Bàng]
+    
+    HH --> TrangAn[Quần thể danh thắng Tràng An]
+    
+    classDef cultural fill:#f96, stroke:#333, stroke-width:1px
+    classDef natural fill:#6b9, stroke:#333, stroke-width:1px
+    classDef mixed fill:#c9f, stroke:#333, stroke-width:1px
+    
+    class VH,Hue,HoiAn,MySon,Citadel,ImperialCitadel,NhaNhac,CaTru,QuantHo cultural
+    class TN,HaLong,PhongNha natural
+    class HH,TrangAn mixed
+```
+
+### 1.5. Quá trình công nhận di sản thế giới tại Việt Nam
+
+```mermaid
+timeline
+    title Di sản UNESCO tại Việt Nam theo thời gian công nhận
+    section Di sản Văn hóa
+        1993 : Quần thể di tích Cố đô Huế
+        1999 : Phố cổ Hội An<br/>Thánh địa Mỹ Sơn
+        2003 : Nhã nhạc cung đình Huế
+        2009 : Hoàng thành Thăng Long<br/>Dân ca Quan họ Bắc Ninh
+        2010 : Thành Nhà Hồ
+        2014 : Nghệ thuật Đờn ca tài tử Nam Bộ
+    section Di sản Thiên nhiên
+        1994, 2000 : Vịnh Hạ Long (công nhận, mở rộng)
+        2003, 2015 : Vườn quốc gia Phong Nha-Kẻ Bàng (công nhận, mở rộng)
+    section Di sản Hỗn hợp
+        2014 : Quần thể danh thắng Tràng An
+```
+
 ## 2. Địa danh và Di sản thế giới
 
 ### 2.1. Châu Á
