--- a/docs/exam_preparation/3_Social_and_Science_Knowledge/science_and_environment/basic_science.mdx
+++ b/docs/exam_preparation/3_Social_and_Science_Knowledge/science_and_environment/basic_science.mdx
@@ -30,6 +30,21 @@ Kiến thức khoa học cơ bản là nền tảng quan trọng giúp học sin
 | **Quang năng** | Năng lượng ánh sáng | Tia nắng mặt trời |
 | **Âm năng** | Năng lượng âm thanh | Tiếng nói, âm nhạc |
 
+#### Quá trình truyền nhiệt
+
+```mermaid
+timeline
+    title Quá trình truyền nhiệt qua vật thể
+    section Dẫn nhiệt
+        Truyền nhiệt qua vật rắn : Nhiệt truyền từ phân tử nóng sang lạnh<br/>Ví dụ: Nhiệt truyền qua cán muỗng kim loại
+    section Đối lưu
+        Truyền nhiệt trong chất lỏng/khí : Do sự chuyển động của phân tử<br/>Ví dụ: Nước sôi, gió
+    section Bức xạ
+        Truyền nhiệt không cần môi trường : Dưới dạng sóng điện từ<br/>Ví dụ: Nhiệt từ mặt trời, lò sưởi
+    section Kết quả
+        Cân bằng nhiệt : Các vật đạt cùng nhiệt độ<br/>Nhiệt luôn truyền từ nơi nóng đến nơi lạnh
+```
+
 ### 1.3. Ánh sáng và Âm thanh
 
 | Hiện tượng | Đặc điểm | Ứng dụng |
@@ -103,6 +118,25 @@ Kiến thức khoa học cơ bản là nền tảng quan trọng giúp học sin
 | **Sinh sản** | Tạo ra cá thể mới | Đẻ trứng, đẻ con, nảy mầm |
 | **Phát triển** | Thay đổi từ nhỏ đến trưởng thành | Nòng nọc thành ếch |
 | **Thích nghi** | Thay đổi để phù hợp với môi trường | Lạc đà thích nghi sa mạc |
+
+#### Quá trình nảy mầm và phát triển của hạt
+
+```mermaid
+timeline
+    title Quá trình nảy mầm và phát triển của hạt
+    section Hạt khô
+        Trạng thái ngủ nghỉ : Trao đổi chất chậm<br/>Chờ điều kiện thuận lợi
+    section Hút nước
+        1-2 ngày đầu : Hạt trương nở, vỏ hạt mềm<br/>Hoạt hóa enzyme
+    section Nảy mầm
+        3-5 ngày : Rễ mầm đâm ra<br/>Hút nước và khoáng chất
+    section Phát triển thân mầm
+        5-7 ngày : Thân mầm đâm lên<br/>Lá mầm xuất hiện
+    section Lá thật
+        7-14 ngày : Lá thật đầu tiên phát triển<br/>Bắt đầu quang hợp
+    section Sinh trưởng
+        2-4 tuần : Phát triển rễ, thân, lá<br/>Tự tổng hợp chất dinh dưỡng
+```
 
 ## 4. Bài tập ứng dụng
 
