--- a/docs/exam_preparation/3_Social_and_Science_Knowledge/science_and_environment/environment_protection.mdx
+++ b/docs/exam_preparation/3_Social_and_Science_Knowledge/science_and_environment/environment_protection.mdx
@@ -52,6 +52,27 @@ Môi trường là tất cả những gì xung quanh chúng ta, bao gồm không
 | **Thời tiết cực đoan** | Thay đổi mô hình thời tiết | Bão, lũ lụt, hạn hán tăng |
 | **Axit hóa đại dương** | Đại dương hấp thụ CO₂ | San hô chết, sinh vật biển bị ảnh hưởng |
 
+#### Biến đổi khí hậu qua các thời kỳ
+
+```mermaid
+timeline
+    title Lịch sử biến đổi khí hậu và tác động con người
+    section Tiền cách mạng công nghiệp
+        Trước 1760 : Nồng độ CO₂ khoảng 280 ppm<br/>Khí hậu tương đối ổn định
+    section Cách mạng công nghiệp
+        1760-1840 : Bắt đầu sử dụng nhiên liệu hóa thạch<br/>CO₂ tăng nhẹ
+    section Đầu thế kỷ 20
+        1900-1950 : Phát triển công nghiệp và giao thông<br/>CO₂ đạt 310 ppm
+    section Giữa thế kỷ 20
+        1950-1980 : Bùng nổ tiêu thụ năng lượng<br/>Nhận thức đầu tiên về biến đổi khí hậu
+    section Cuối thế kỷ 20
+        1980-2000 : Thành lập IPCC (1988)<br/>Nghị định thư Kyoto (1997)
+    section Đầu thế kỷ 21
+        2000-2015 : CO₂ vượt 400 ppm<br/>Hiện tượng thời tiết cực đoan tăng
+    section Hiện tại
+        2015-nay : Thỏa thuận Paris (2015)<br/>Nỗ lực toàn cầu giảm phát thải<br/>Nhiệt độ tăng gần 1.1°C so với thời kỳ tiền công nghiệp
+```
+
 ### 2.3. Mất đa dạng sinh học
 
 | Vấn đề | Nguyên nhân | Hậu quả |
@@ -73,6 +94,25 @@ Môi trường là tất cả những gì xung quanh chúng ta, bao gồm không
 | **Bảo vệ rừng** | Trồng cây, không phá rừng | Giữ đa dạng sinh học, chống xói mòn |
 | **Sử dụng năng lượng sạch** | Năng lượng mặt trời, gió | Giảm ô nhiễm, bảo vệ tài nguyên |
 | **Tiết kiệm nước** | Sửa vòi nước rò rỉ, tận dụng nước mưa | Bảo vệ nguồn nước, giảm lãng phí |
+
+#### Chu trình hành động bảo vệ môi trường
+
+```mermaid
+timeline
+    title Chu trình bảo vệ môi trường hiệu quả
+    section Nhận thức
+        Hiểu biết vấn đề : Tìm hiểu về môi trường<br/>Nhận diện các vấn đề tại địa phương
+    section Lên kế hoạch
+        Xác định mục tiêu : Đặt ra các mục tiêu cụ thể<br/>Ví dụ: Giảm rác thải nhựa 50%
+    section Thực hiện
+        Hành động cụ thể : Thay túi nhựa bằng túi vải<br/>Phân loại rác<br/>Tiết kiệm điện nước
+    section Theo dõi
+        Đánh giá tiến độ : Ghi chép lượng rác thải<br/>Đo lường mức tiêu thụ năng lượng
+    section Chia sẻ
+        Truyền cảm hứng : Chia sẻ kết quả với người khác<br/>Tổ chức hoạt động cộng đồng
+    section Điều chỉnh
+        Cải thiện liên tục : Rút kinh nghiệm<br/>Áp dụng phương pháp mới
+```
 
 ### 3.2. Phát triển bền vững
 
