Update website configuration, enhance README, and add comprehensive practical skills materials for exam preparation

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -6,145 +6,92 @@ sidebar_position: 1
 
 Chào mừng bạn đến với **StepUp6** - Bộ tài liệu luyện thi toàn diện dành cho học sinh lớp 5 chuẩn bị thi vào THCS chuyên.
 
-## Mục tiêu của chúng tôi
+## Mục tiêu của StepUp6
 
-StepUp6 được xây dựng với mục tiêu:
+StepUp6 được xây dựng với các mục tiêu chính:
 
-- **Hỗ trợ tự học**: Thiết kế để học sinh lớp 5 có thể tự học hiệu quả
-- **Công cụ đồng hành**: Giúp phụ huynh có tài liệu tin cậy để hướng dẫn con em ôn tập
-- **Hệ thống hoá kiến thức**: Tổng hợp và sắp xếp kiến thức một cách logic, dễ tiếp cận
+- **Hỗ trợ tự học hiệu quả**: Giúp học sinh lớp 5 tự ôn tập kiến thức và rèn luyện kỹ năng
+- **Công cụ đồng hành cho phụ huynh**: Cung cấp tài liệu tin cậy để hướng dẫn con em ôn tập
+- **Hệ thống hóa kiến thức toàn diện**: Tổng hợp kiến thức và kỹ năng theo cấu trúc logic, khoa học
+- **Phương pháp tiếp cận đa chiều**: Ôn tập cả kiến thức và phát triển kỹ năng thực hành
 
 ## Điểm nổi bật
 
 ### Tổng hợp tài liệu uy tín
 
 Chúng tôi đã thu thập và chọn lọc:
-- **Đề thi và tài liệu luyện thi** từ trường THCS Trần Đại Nghĩa (Quận 1, TP.HCM)
-- **Đề thi và tài liệu luyện thi** từ trường THCS Trần Quốc Toản (Thủ Đức, TP.HCM)
-- **Bài giảng và phương pháp** từ các giáo viên có kinh nghiệm luyện thi
+- **Đề thi và tài liệu luyện thi** từ trường THCS Trần Đại Nghĩa (TP.HCM)
+- **Đề thi và tài liệu luyện thi** từ trường THCS Trần Quốc Toản (TP.HCM)
+- **Phương pháp học tập hiệu quả** từ các giáo viên có kinh nghiệm luyện thi
 
-### Chương trình khung kiến thức tổng quát
+### Rèn luyện kỹ năng thực hành
 
-- Hệ thống kiến thức cốt lõi của chương trình lớp 5
-- Các chuyên đề nâng cao cần thiết cho kỳ thi vào trường chuyên
-- Phân loại theo mức độ từ cơ bản đến nâng cao
+- **Kỹ năng thuyết trình**: Phát triển khả năng trình bày rõ ràng, tự tin trước đám đông
+- **Trình bày ý kiến**: Rèn luyện kỹ năng lập luận, sử dụng dẫn chứng thuyết phục
+- **Làm việc nhóm**: Phát triển khả năng hợp tác, phân công và giải quyết vấn đề theo nhóm
+- **Sáng tạo khẩu hiệu**: Trau dồi tư duy sáng tạo, ngôn ngữ súc tích và ấn tượng
+- **Giải đố và tư duy sáng tạo**: Phát triển tư duy logic, suy luận và khả năng giải quyết vấn đề
 
-### Lộ trình học tập cá nhân hóa
+### Phương pháp học tập khoa học
 
-- **Lộ trình chuyên biệt** cho từng trường (Trần Đại Nghĩa, Trần Quốc Toản)
-- **Kế hoạch ôn tập** theo tuần/tháng, phù hợp với thời gian chuẩn bị
-- **Hệ thống bài tập** đa dạng với đáp án và hướng dẫn giải chi tiết
+- **Học từ cơ bản đến nâng cao**: Xây dựng nền tảng kiến thức vững chắc trước khi tiếp cận vấn đề phức tạp
+- **Lộ trình học tập có hệ thống**: Kế hoạch ôn tập theo tuần, tháng, phù hợp với thời gian chuẩn bị
+- **Ôn luyện theo dạng bài**: Phân loại và luyện tập theo các dạng bài thường gặp trong đề thi
+- **Phản hồi kịp thời**: Đáp án và hướng dẫn giải chi tiết giúp học sinh tự đánh giá và cải thiện
+
+## Cấu trúc bộ tài liệu
+
+StepUp6 được tổ chức thành các mảng kiến thức và kỹ năng chính như sau:
+
+```mermaid
+graph TD
+    A[StepUp6] --> B[Đọc - Hiểu]
+    A --> C[Toán học và Logic]
+    A --> D[Kiến thức Khoa học - Xã hội]
+    A --> E[Tiếng Anh]
+    A --> F[Kỹ năng thực hành]
+    A --> G[Đề thi và luyện tập]
+    
+    B --> B1[Đọc hiểu tiếng Việt]
+    B --> B2[Đọc hiểu tiếng Anh]
+    
+    C --> C1[Toán ứng dụng]
+    C --> C2[Logic và IQ]
+    
+    D --> D1[Khoa học và Môi trường]
+    D --> D2[Địa lý, Lịch sử và Văn hóa]
+    
+    E --> E1[Nghe]
+    E --> E2[Đọc]
+    E --> E3[Viết]
+    E --> E4[Từ vựng và Ngữ pháp]
+    
+    F --> F1[Thuyết trình]
+    F --> F2[Trình bày ý kiến]
+    F --> F3[Làm việc nhóm]
+    F --> F4[Sáng tạo khẩu hiệu]
+    F --> F5[Giải đố và tư duy sáng tạo]
+    
+    G --> G1[Đề thi theo trường]
+    G --> G2[Bài tập theo chuyên đề]
+    G --> G3[Đề thi thử]
+```
 
 ## Cách sử dụng bộ tài liệu
 
-1. Đánh giá năng lực hiện tại qua các bài kiểm tra đầu vào
-2. Chọn lộ trình phù hợp với mục tiêu và thời gian
-3. Học lý thuyết, làm bài tập theo từng chuyên đề
-4. Kiểm tra định kỳ và điều chỉnh lộ trình nếu cần
+1. **Đánh giá năng lực hiện tại**: Làm bài kiểm tra đầu vào để xác định điểm mạnh, điểm yếu
+2. **Chọn lộ trình phù hợp**: Dựa trên thời gian chuẩn bị (1, 3 hoặc 6 tháng)
+3. **Ôn tập theo chuyên đề**: Học lý thuyết và làm bài tập theo từng chuyên đề
+4. **Phát triển kỹ năng thực hành**: Rèn luyện các kỹ năng thực hành cần thiết cho kỳ thi
+5. **Luyện đề và tự đánh giá**: Làm đề thi thử và theo dõi tiến độ học tập
+6. **Điều chỉnh lộ trình**: Cải thiện những phần còn yếu, tập trung vào kiến thức trọng tâm
 
-## Khung Tài Liệu StepUp6
+## Lời khuyên cho học sinh
 
-Bộ tài liệu StepUp6 được tổ chức theo cấu trúc khoa học, giúp dễ dàng tra cứu và học tập hiệu quả.
+- **Học đều đặn mỗi ngày**: Dành thời gian học tập cố định để hình thành thói quen
+- **Đặt mục tiêu cụ thể**: Xác định mục tiêu cho từng ngày, tuần và tháng
+- **Vừa học vừa thực hành**: Kết hợp học lý thuyết với luyện tập kỹ năng thực hành
+- **Không ngại khó**: Đối mặt với những dạng bài khó và tìm cách giải quyết
+- **Nghỉ ngơi hợp lý**: Đảm bảo thời gian nghỉ ngơi để duy trì hiệu suất học tập
 
-### Cấu trúc chung
-
-```
-StepUp6
-├── Kiến thức nền tảng
-│   ├── Toán học
-│   ├── Tiếng Việt
-│   ├── Tiếng Anh
-│   ├── Tư duy & Giải quyết vấn đề
-│   └── Kiến thức tổng hợp
-│
-├── Đề thi & Tài liệu theo trường
-│   ├── THCS Trần Đại Nghĩa
-│   └── THCS Trần Quốc Toản
-│
-├── Lộ trình ôn tập
-│   ├── 6 tháng chuẩn bị
-│   ├── 3 tháng chuẩn bị
-│   └── 1 tháng chuẩn bị
-│
-└── Bài tập & Đánh giá
-    ├── Bài tập theo chuyên đề
-    ├── Đề thi thử
-    └── Đánh giá năng lực
-```
-
-### Chi tiết từng phần
-
-#### 1. Kiến thức nền tảng
-
-##### Toán học
-- **Số học**: Phân số, tỷ số, số thập phân, quy tắc chia hết
-- **Đại số**: Biểu thức, phương trình, bất phương trình
-- **Hình học**: Hình phẳng, diện tích, thể tích, hình không gian
-- **Toán nâng cao**: Tổ hợp, xác suất, giải toán lời văn, toán logic
-
-##### Tiếng Việt
-- **Ngữ pháp**: Cấu trúc câu, từ loại, dấu câu
-- **Đọc hiểu**: Kỹ năng đọc hiểu văn bản, trả lời câu hỏi
-- **Viết**: Kỹ năng viết đoạn văn, bài văn
-- **Chính tả & Ngữ âm**: Quy tắc chính tả, ngữ âm tiếng Việt
-
-##### Tiếng Anh
-- **Từ vựng**: Từ vựng theo chủ đề
-- **Ngữ pháp**: Thì, cấu trúc câu cơ bản và nâng cao
-- **Đọc hiểu**: Kỹ năng đọc hiểu văn bản tiếng Anh
-- **Kỹ năng nghe**: Luyện nghe tiếng Anh
-
-##### Tư duy & Giải quyết vấn đề
-- **Tư duy logic**: Các bài toán logic, suy luận
-- **Tư duy không gian**: Hình khối, xoay hình, gấp hình
-- **Tư duy sáng tạo**: Các bài tập sáng tạo, giải quyết vấn đề
-- **IQ & EQ**: Bài tập phát triển IQ và EQ
-
-#### 2. Đề thi & Tài liệu theo trường
-
-##### THCS Trần Đại Nghĩa
-- **Đề thi các năm**: 2018-2024
-- **Cấu trúc đề thi**: Phân tích chi tiết
-- **Đặc thù kiến thức**: Các dạng bài thường gặp
-- **Chiến lược ôn tập**: Phương pháp ôn tập hiệu quả
-
-##### THCS Trần Quốc Toản
-- **Đề thi các năm**: 2018-2024
-- **Cấu trúc đề thi**: Phân tích chi tiết
-- **Đặc thù kiến thức**: Các dạng bài thường gặp
-- **Chiến lược ôn tập**: Phương pháp ôn tập hiệu quả
-
-#### 3. Lộ trình ôn tập
-
-##### 6 tháng chuẩn bị
-- **Tháng 1-2**: Kiến thức nền tảng
-- **Tháng 3-4**: Luyện kỹ năng và nâng cao
-- **Tháng 5-6**: Luyện đề và chuẩn bị thi
-
-##### 3 tháng chuẩn bị
-- **Tháng 1**: Kiến thức trọng tâm
-- **Tháng 2**: Luyện dạng bài khó
-- **Tháng 3**: Luyện đề và chuẩn bị thi
-
-##### 1 tháng chuẩn bị
-- **Tuần 1-2**: Ôn tập nhanh kiến thức trọng tâm
-- **Tuần 3-4**: Luyện đề và kỹ thuật làm bài thi
-
-#### 4. Bài tập & Đánh giá
-
-##### Bài tập theo chuyên đề
-- **Bài tập cơ bản**: Bài tập theo từng chuyên đề
-- **Bài tập nâng cao**: Bài tập khó, có tính phân loại
-- **Bộ sưu tập đề thi**: Đề thi từ nhiều trường chuyên
-
-##### Đề thi thử
-- **Đề thi thử TĐN**: Theo cấu trúc Trần Đại Nghĩa
-- **Đề thi thử TQT**: Theo cấu trúc Trần Quốc Toản
-- **Đề thi tổng hợp**: Kết hợp nhiều dạng đề thi
-
-##### Đánh giá năng lực
-- **Bài kiểm tra đầu vào**: Xác định năng lực ban đầu
-- **Bài kiểm tra định kỳ**: Đánh giá tiến độ học tập
-- **Bài kiểm tra tổng hợp**: Đánh giá toàn diện
-
-Hãy bắt đầu hành trình chinh phục kỳ thi vào trường chuyên cùng StepUp6!
+Hãy bắt đầu hành trình chinh phục kỳ thi vào trường THCS chuyên cùng StepUp6!
